style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    height: 100%;
}

body {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-flow: column;
    row-gap: 25px;
}

.nav {
    display: flex;
    gap: 25px;
    align-content: space-between;
}

.nav button {
    font-weight: 700;
    padding: 8px 16px;
    border-color: black;
    border-radius: 5px;
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
    background-color: white;
}

.nav button:active {
    box-shadow:inset 4px 4px 5px rgba(0, 0, 0, 0.1);
}

.board {
    display: grid;
    grid-template-columns: repeat(3, 250px);
    grid-template-rows: repeat(3, 250px);
}

.square {
    height: 250px;
    width: 250px;
    background: black;
    color: aliceblue;
    font-size: 200px;
    text-align: center;
}

div[data-index = "5"] {
    border: 1px solid white;
}

div[data-index = "2"] {
    border-left: 1px solid white;
    border-right: 1px solid white;
}

div[data-index = "4"] {
    border-top: 1px solid white;
    border-bottom: 1px solid white;
}

div[data-index = "6"] {
    border-top: 1px solid white;
    border-bottom: 1px solid white;
}

div[data-index = "8"] {
    border-left: 1px solid white;
    border-right: 1px solid white;
}

